tests/example-projects/failing/todo/tests/Tests.elm
module Tests exposing (..)

import Test exposing (Test)


suite : Test
suite =
    Test.todo "Implement the first test. See https://package.elm-lang.org/packages/elm-explorations/test/latest for how to do this!"
